# api

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  deploy.yml
src/: app.py  index.py
src/config/: env.py
src/db/: client.py  models.py  schema.sql
src/middleware/: auth_middleware.py  error_middleware.py
src/modules/auth/: apple_verify.py  auth_controller.py  auth_repo.py  auth_service.py  auth_types.py
src/modules/catalogs/: catalogs_controller.py  catalogs_service.py  catalogs_types.py
src/modules/history/: history_controller.py  history_service.py  history_types.py
src/modules/profile/: profile_controller.py  profile_service.py  profile_types.py
src/modules/search/: search_controller.py  search_service.py  search_types.py
src/modules/watchlist/: watchlist_controller.py  watchlist_service.py  watchlist_types.py
src/shared/clients/: tmdb_client.py
src/shared/errors/: app_error.py
src/shared/http/: response.py
src/shared/security/: token.py
tests/: test_search_service.py
